rendering motorcycle mirrored

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/main.css">
   <script src = '/bundle.js'></script>
-  <title>J Lemmon</title>
+  <title>TJS MOCK</title>
 </head>
 <body>
-  <script src = '/js/OrbitControls.js'> </script>
-  <script src = '/js/Fog.js'> </script>
   <div id = 'app'>
   </div>
 </body>
